@@ -3,4 +3,4 @@
 
 var populate = require('../lib/populate');
 
-populate(process.argv[2], process.argv[3]);
+populate();
