@@ -1,15 +1,26 @@
 'use strict';
 
-function populate(name, f) {
-    name = name || 'npmdb.sqlite';
+var nopt = require('nopt'),
+    fs = require('fs'),
+    path = require('path'),
+    getDb = require('./getDB'),
+    eachPackage = require('./eachPackage'),
+    populateDb = require('./populateDb'),
+    known = {
+        "db": path,
+        "from": path
+    };
+
+function getOptions(argv) {
+    return nopt(known, {}, argv, 2);
+}
+
+function populate() {
 
     /*jslint nomen:true*/
-    var eachPackage = require('./eachPackage'),
-        fs = require('fs'),
-        path = require('path'),
-        getDb = require('./getDB'),
-        populateDb = require('./populateDb'),
-        from = f || path.resolve(__dirname, '..', 'npm-all-cache.json'),
+    var opts = getOptions(process.argv),
+        name = opts.db || 'npmdb.pft',
+        from = opts.from || path.resolve(__dirname, '..', 'npm-all-cache.json'),
         count = 0,
         s = fs.createReadStream(from);
 
@@ -36,3 +47,5 @@ function populate(name, f) {
 }
 
 module.exports = populate;
+
+populate.getOptions = getOptions;
