@@ -34,11 +34,15 @@ module.exports = function (db) {
     };
 
     db.addPackage = function (obj) {
-        obj.author = authors(obj.maintainers);
-        obj.description = obj.description || "";
-        obj.date = fixTime(obj.time);
-        obj.version = Object.keys(obj.versions || {})[0];
-        this.add(obj);
+        var o = {
+            author: authors(obj.maintainers),
+            version: Object.keys(obj.versions || {})[0],
+            keywords: [].concat(obj.keywords).join(', '),
+            description: obj.description || "",
+            date: fixTime(obj.time),
+            name: obj.name
+        };
+        this.add(o);
     };
 
     db.findByName = function (name, cb, done) {
