@@ -3,7 +3,14 @@
 
 var populateDb = require('./populateDb'),
     columnify = require('columnify'),
-    getDb = require('./getDb');
+    getDb = require('./getDb'),
+    path = require('path'),
+    nopt = require('nopt'),
+    known = {
+        "db": path,
+        "name": String,
+        "author": String
+    };
 
 function nice_output(obj) {
     console.log(columnify(obj, {
@@ -20,9 +27,16 @@ function nice_output(obj) {
     }));
 }
 
-function search_db(arg1, arg2) {
+function getOptions(argv) {
+    return nopt(known, {}, argv, 2);
+}
 
-    getDb(arg2, function (err, db) {
+function search_db() {
+
+    var opts = getOptions(process.argv),
+        dbName = opts.db || "./npmdb.pft";
+
+    getDb(dbName, function (err, db) {
         if (err) {
             console.error("ERR: " + err.message);
             // exit process with stacktrace
@@ -32,7 +46,7 @@ function search_db(arg1, arg2) {
         db = populateDb(db);
 
         // full text search
-        db.findFTS(arg1, function (err, obj) {
+        db.findFTS(opts.argv.remain[0], function (err, obj) {
             if (err) {
                 console.error("ERR: " + err.message);
                 // exit process with stacktrace
@@ -48,3 +62,5 @@ function search_db(arg1, arg2) {
 }
 
 module.exports = search_db;
+
+search_db.getOptions = getOptions;
