@@ -1,7 +1,7 @@
 'use strict';
 
 var makeDb = require('../lib/makeDb'),
-    testDB = './test.sqlite';
+    testDB = './fixtures/test.pft';
 
 var Code = require('code');
 var Lab = require('lab');
@@ -15,6 +15,19 @@ var expect = Code.expect;
 describe('makedb', function () {
     it('makes a database', function (done) {
         makeDb(testDB, function (err, db) {
+            expect(err).to.equal(null);
+
+            var result = db.search('');
+            
+            expect(result).to.deep.equal([]);
+            done();
+        });
+    });
+});
+
+describe('makedb', function () {
+    it('makes a database', function (done) {
+        makeDb('invalid-name', function (err, db) {
             expect(err).to.equal(null);
 
             var result = db.search('');
